# gitdar

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
gitdar.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/cli/: main.py
src/cli/commands/: init.py  prs.py  standup.py
src/cli/output/: formatter.py
src/config/: defaults.py  loader.py
src/domains/application/: tools.py
src/domains/engineering/domain/: models.py
src/domains/engineering/infra/: repository.py
src/runtime/: executor.py  orchestrator.py
src/services/llm/: base.py
src/services/llm/providers/: lmstudio.py
src/shared/contracts/: tool_metadata.py  tool_response.py
src/tests/unit/: test_imports.py  test_init.py  test_lm_studio.py  test_repository.py
