[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gitdar"
version = "0.1.0"
description = "Your AI standup teammate. . Reads GitHub, writes your standup."
requires-python = ">=3.10"

dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
    "pyperclip>=1.8.2",
    "httpx>=0.27.0",
    "openai>=1.30.0",
    "pydantic>=2.7.0",
    "sqlalchemy>=2.0.0",
    "tomlkit>=0.12.0",
    "alembic>=1.13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.14.0",
]

[project.scripts]
# src is the package name, so: src.cli.main:app
gitdar = "src.cli.main:app"

[tool.setuptools.packages.find]
# tells setuptools to look for packages starting with "src"
include = ["src*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["src/tests"]      # updated path

pythonpath = ["."]             # includes project root